tests/__snapshots__/validation-testFileMatch-cannot-start-with-slash.snap.txt
Error: A 'testFileMatch' pattern cannot start with '/'.

The files are only collected within the root directory.

  1 | {
  2 |   "testFileMatch": [
  3 |     "/feature"
    |     ~~~~~~~~~~
  4 |   ]
  5 | }
  6 | 

      at ./tstyche.config.json:3:5

